--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,6 @@
 
 // SweetAlert2
 @import 'sweetalert2/src/sweetalert2.scss';
+
+// Font Awesome
+@import "@fortawesome/fontawesome-free/css/all.css";
